// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nested media query implicitly adds parent selector 1`] = `
[
  {
    "$nodeType": "at",
    "nestedRules": [
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "name": "color",
            "value": "red",
          },
        ],
        "selectors": [
          ".banana",
        ],
      },
    ],
    "parameters": "screen",
    "type": "media",
  },
]
`;

exports[`Normal @ rule nesting 1`] = `
[
  {
    "$nodeType": "at",
    "nestedRules": [
      {
        "$nodeType": "at",
        "nestedRules": [
          {
            "$nodeType": "rule",
            "nestedRules": [],
            "properties": [
              {
                "$nodeType": "property",
                "name": "color",
                "value": "green",
              },
            ],
            "selectors": [
              "a",
            ],
          },
          {
            "$nodeType": "rule",
            "nestedRules": [],
            "properties": [
              {
                "$nodeType": "property",
                "name": "color",
                "value": "green",
              },
            ],
            "selectors": [
              "b",
            ],
          },
        ],
        "parameters": "(max-width: 200px)",
        "type": "media",
      },
      {
        "$nodeType": "rule",
        "nestedRules": [],
        "properties": [
          {
            "$nodeType": "property",
            "name": "color",
            "value": "rebeccapurple",
          },
        ],
        "selectors": [
          "div",
        ],
      },
      {
        "$nodeType": "at",
        "nestedRules": [
          {
            "$nodeType": "rule",
            "nestedRules": [],
            "properties": [
              {
                "$nodeType": "property",
                "name": "background",
                "value": "grey",
              },
            ],
            "selectors": [
              "div",
            ],
          },
        ],
        "parameters": "(min-width: 200px)",
        "type": "media",
      },
    ],
    "parameters": "screen",
    "type": "media",
  },
]
`;
